# bo_robotic_palpation

./: .gitignore  CMakeLists.txt  README.md  assignments.csv  centroids.csv  parameters_stored.txt  triangle_display_params.txt
config/: bo_parameters.txt  bo_parameters_.txt  contour.csv  contour_1.csv  contour_2.csv  contour_3.csv  contour_parameters.txt  contour_points_1.csv  contour_points_2.csv  contour_points_3.csv  normalized_data.csv  posterior.csv  posterior.txt  scattered_data.csv  scattered_data_evaluate.csv  tumor_model_parameters.txt
data/Circle1/log/: contour_points_1.csv  ms_assignments.csv  ms_centroids.csv
data/Circle2/log/: contour_1.csv  contour_parameters.txt  normalized_data.csv  scattered_data.csv  tumor_model_parameters.txt
data/Circle2/results/: metrics.txt
docs/: Doxyfile
docs/html/: annotated.html  classCircle-members.html  classCircle.html  classCircle__coll__graph.map  classCircle__inherit__graph.md5  classContour-members.html  classContour.html  classContourPairAnalyzer-members.html  classContourPairAnalyzer.html  classDisplayHeatMap2D-members.html  classDisplayHeatMap2D.html  classDisplayHeatMap2D__coll__graph.map  classDisplayHeatMap2D__inherit__graph.md5  classGaussianNoise-members.html  classGaussianNoise.html  classK__means-members.html  classK__means.html  classMeanShift-members.html  classMeanShift.html  classPolarPolygon-members.html  classPolarPolygon.html  classRectangle-members.html  classRectangle.html  classRectangle__coll__graph.map  classRectangle__coll__graph.md5  classRectangle__inherit__graph.md5  classRoboticPalpation-members.html  classRoboticPalpation.html  classRoboticPalpation__coll__graph.md5  classRoboticPalpation__inherit__graph.map  classShape-members.html  classShape.html  classShape__coll__graph.map  classShape__coll__graph.md5  classShape__inherit__graph.map  classShape__inherit__graph.md5  classSmoothCircle-members.html  classSmoothCircle.html  classSmoothCircle__coll__graph.map  classSmoothCircle__inherit__graph.map  (+127 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enums_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+14 more)
docs/latex/: annotated.tex  classCircle.tex  classCircle__coll__graph.md5  classContour.tex  classContourPairAnalyzer.tex  classDisplayHeatMap2D.tex  classDisplayHeatMap2D__inherit__graph.md5  classGaussianNoise.tex  classK__means.tex  classMeanShift.tex  classPolarPolygon.tex  classRectangle.tex  classRectangle__coll__graph.md5  classRectangle__inherit__graph.md5  classRoboticPalpation.tex  classRoboticPalpation__coll__graph.md5  classShape.tex  classShape__coll__graph.md5  classShape__inherit__graph.md5  classSmoothCircle.tex  classSmoothCircle__coll__graph.md5  classSmoothCircle__inherit__graph.md5  classTriangle.tex  classTriangle__coll__graph.md5  classTriangle__inherit__graph.md5  classTwoCircles.tex  classTwoCircles__coll__graph.md5  classTwoCircles__inherit__graph.md5  contour_8cpp.tex  contour_8cpp__incl.md5  contour_8hpp.tex  contour_8hpp__dep__incl.md5  contour_8hpp__incl.md5  display2dgp_8cpp.tex  display2dgp_8cpp__incl.md5  display2dgp_8hpp.tex  display2dgp_8hpp__dep__incl.md5  display2dgp_8hpp__incl.md5  evaluation_8cpp.tex  evaluation_8cpp__incl.md5  (+33 more)
docs/uml/: .xdp_uml.P8YDK2  tumorModel.uxf
images/: Dockerfile
include/: contour.hpp  display2dgp.hpp  displayProcess.hpp  evaluation.hpp  fileParser.hpp  helper.hpp  meanShift.hpp  parameters.hpp  tumorModel.hpp
matplotpp/: matplotpp.cc  matplotpp.h
scripts/: assignments.csv  centroids.csv  clusterError.py  computeSmoothStep.py  integral_vals.csv  showIntegral.py  visualize.py  visualizeCenters.py  visualizeClusters.py  visualizeContour.py  visualizeData.py  visualizeGroundTruth.py  visualizeHeatMap.py  visualizeNormalizedPosterior.py  visualizePosterior.py  visualizeScatteredData.py  visualizeStd.py
src/: contour.cpp  contour_main.cpp  display2dgp.cpp  displayProcess.cpp  evaluation.cpp  fileParser.cpp  helper.cpp  main.cpp  meanShift.cpp  oned_main.cpp  parameters.cpp  test.cpp  tumorModel.cpp  twod_main.cpp  wastecode.hpp
utils/: displaygp.cpp  param_loader.cpp  param_loader.hpp
